fix alignment

--- a/style.css
+++ b/style.css
@@ -68,12 +68,10 @@ header p {
     margin-bottom: 16px;
     border-bottom: 8px solid hsl(0deg, 0%, 30%);
 
-
-
 }
 
 .indented-heading {
-    padding: 16px;
+    padding: 48px;
     font-size: 1.3rem;
     width: 60%;
     margin-top: 4px;
@@ -81,7 +79,7 @@ header p {
 }
 
 .card p {
-    padding: 16px;
+    padding: 16px 0 0 48px;
 }
 
 section {
@@ -102,7 +100,7 @@ section {
     .indented-heading {
         margin-top: 0;
         width: 70%;
-        padding: 32px;
+        padding: 16px;
 
     }
     .card {
@@ -134,12 +132,12 @@ section {
     .card {
         padding: 16px 32px 0 0;
     }
+
     .card h2 {
-        padding: 32px;
+        padding-left: 32px;
         width: 80%;
         margin: 0;
     }
-
 
     .card p {
         display: none;
